# vsss-rodetas-LARC-2020-FiraSIM

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.md.save  RobotStrategy.cpp  Rodetas  VSS-SampleCpp  build_test.sh  configure.sh  dockerbuild.sh  runRodetas.sh  runrodetas.sh
.semaphore/: semaphore.yml
glade/: control-window.glade  control-window.glade~
includes/: Agent.h  BallState.h  CommandSendAdapter.h  Common.h  Config.h  DebugSenderAdapter.h  IWindowControl.h  Kernel.h  MathHelper.h  Mindset.h  Movimentation.h  RobotDebug.h  RobotState.h  RobotStrategyFactory.h  RodetasRobot.h  RodetasState.h  StateInterpreter.h  StateReceiverAdapter.h  Transmission.h  UnivectorField.h  WindowControl.h  ball.h  common.h  config.h  movimentation.h  object.h  robot.h  sample.h  state.h  strategy.h  tests.h  transmission.h  univectorfield.h
includes/Communication/: CommandSendAdapter.h  DebugSenderAdapter.h  StateReceiverAdapter.h  Transmission.h
includes/Domain/: BallState.h  Mindset.h  PositionStatus.h  RobotSpeed.h  RobotState.h  RodetasState.h
includes/Helpers/: MathHelper.h
includes/Movements/: Movimentation.h  UnivectorField.h
includes/Positioning/: GoalKeeperCenterPositioning.h  RobotPositioning.h
includes/Positioning/Left/: AttackFreeballLeftAttackPositionin2.h  AttackFreeballLeftDefensePositioning.h
includes/Positioning/Middle/: AttackMiddleAttackPositioning.h  AttackMiddleDefensePositioning.h  DefenderMiddleAttackPositioning.h  DefenderMiddleDefensePositioning.h
includes/Positioning/Penalty/: AttackPenaltyAgainstPositioning.h  AttackPenaltyHitPositioning.h  AttackPenaltyPositioning.h  DefenderPenaltyAgainstPositioning.h  DefenderPenaltyHitPositioning.h  DefenderPenaltyPositioning.h
includes/Positioning/Right/: AttackFreeballRightAttackPositioning.h  AttackFreeballRightDefensePositioning.h
includes/Strategies/: NoneStrategy.h  RobotStrategy.h  RobotStrategy.h~  RobotStrategyAttack.h  RobotStrategyAttackDefense.h  RobotStrategyBase.h  RobotStrategyCenterAttack.h  RobotStrategyDefender.h  RobotStrategyDefenderBack.h  RobotStrategyDefenderLeft.h  RobotStrategyDefenderRight.h  RobotStrategyForwardAttack.h  RobotStrategyGoal.h  RobotStrategySideAttack.h  RobotStrategySingleAttack.h
includes/Window/: WindowControl.h
includes/strategies/: RobotStrategy.h  RobotStrategyAttack.h  RobotStrategyBase.h  RobotStrategyDefender.h  RobotStrategyGoal.h  StrategyAttack.h  StrategyBase.h  StrategyDefense.h  StrategyGoal.h
net/: grSim_client.cpp  grSim_client.h  robocup_ssl_client.cpp  robocup_ssl_client.cpp.autosave  robocup_ssl_client.h
net/google/protobuf/.deps/: extension_set.Plo  no_warning_test-any_test.pb.Po  no_warning_test-map_lite_unittest.pb.Po  no_warning_test-map_proto2_unittest.pb.Po  no_warning_test-map_unittest.pb.Po  no_warning_test-unittest.pb.Po  no_warning_test-unittest_arena.pb.Po  no_warning_test-unittest_custom_options.pb.Po  no_warning_test-unittest_drop_unknown_fields.pb.Po  no_warning_test-unittest_embed_optimize_for.pb.Po  no_warning_test-unittest_empty.pb.Po  no_warning_test-unittest_enormous_descriptor.pb.Po  no_warning_test-unittest_import.pb.Po  no_warning_test-unittest_import_lite.pb.Po  no_warning_test-unittest_import_public.pb.Po  no_warning_test-unittest_import_public_lite.pb.Po  no_warning_test-unittest_lazy_dependencies.pb.Po  no_warning_test-unittest_lazy_dependencies_custom_option.pb.Po  no_warning_test-unittest_lazy_dependencies_enum.pb.Po  no_warning_test-unittest_lite.pb.Po  no_warning_test-unittest_lite_imports_nonlite.pb.Po  no_warning_test-unittest_mset.pb.Po  no_warning_test-unittest_mset_wire_format.pb.Po  no_warning_test-unittest_no_arena.pb.Po  (+127 more)
src/: Ball.h  CommandSendAdapter.cpp  Common.cpp  Config.cpp  DebugSendAdapter.cpp  Kernel.cpp  Main.cpp  MathHelper.cpp  Movimentation.cpp  Movimentation.h  Robot.cpp  Robot.h  RobotStrategyFactory.cpp  RodetasRobot.cpp  State.h  StateInterpreter.cpp  StateInterpreter.cpp~  StateReceiverAdapter.cpp  Transmission.cpp  UnivectorField.cpp  WindowControl.cpp  common.cpp  common.h  config.cpp  main.cpp  movimentation.cpp  movimentation.h  object.h  robot.cpp  robot.h  sample.cpp  sample.h  state.cpp  state.h  strategy.cpp  strategy.h  transmission.cpp  transmission.h  univectorfield.cpp
src/Communication/: CommandSendAdapter.cpp  DebugSendAdapter.cpp  StateReceiverAdapter.cpp  Transmission.cpp  Untitled-1.cpp
src/Domain/: Mindset.cpp  PositionStatus.cpp
src/Helpers/: MathHelper.cpp  TimeHelper.cpp
src/Movements/: Movimentation.cpp  UnivectorField.cpp
src/Positioning/: GoalKeeperCenterPositioning.cpp  RobotPositioning.cpp
src/Positioning/Left/: AttackFreeballLeftAttackPositioning.cpp  AttackFreeballLeftDefensePositioning.cpp
src/Positioning/Middle/: AttackMiddleAttackPositioning.cpp  AttackMiddleDefensePositioning.cpp  DefenderMiddleAttackPositioning.cpp  DefenderMiddleDefensePositioning.cpp
src/Positioning/Penalty/: AttackPenaltyAgainstPositioning.cpp  AttackPenaltyHitPositioning.cpp  AttackPenaltyPositioning.cpp  DefenderPenaltyAgainstPositioning.cpp  DefenderPenaltyHitPositioning.cpp  DefenderPenaltyPositioning.cpp
src/Positioning/Right/: AttackFreeballRightAttackPositioning.cpp  AttackFreeballRightDefensePositioning.cpp
src/Strategies/: NoneStrategy.cpp  RobotStrategy.cpp  RobotStrategyAttack.cpp  RobotStrategyAttackDefense.cpp  RobotStrategyBase.cpp  RobotStrategyCenterAttack.cpp  RobotStrategyDefender.cpp  RobotStrategyDefenderBack.cpp  RobotStrategyDefenderLeft.cpp  RobotStrategyDefenderRight.cpp  RobotStrategyForwardAttack.cpp  RobotStrategyGoal.cpp  RobotStrategySideAttack.cpp  RobotStrategySingleAttack.cpp  RobotStrategyV2.cpp
src/Window/: WindowControl.cpp
src/strategies/: RobotStrategy.cpp  RobotStrategyAttack.cpp  RobotStrategyBase.cpp  RobotStrategyDefender.cpp  RobotStrategyGoal.cpp  StrategyAttack.cpp  StrategyAttack.h  StrategyBase.cpp  StrategyBase.h  StrategyDefense.cpp  StrategyDefense.h  StrategyGoal.cpp  StrategyGoal.h
test/: MainTest.cpp  RobotStrategyTest.cpp  Tests.cpp  TransmissionTests.h
(+100 files in other folders)
